src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Sub_Type_2__c</fullName>
        <label>Sub Type 2</label>
        <picklist>
            <controllingField>Sub_Type_1__c</controllingField>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back-Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage in Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired/Short Dated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold/Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Serial_Number__c</fullName>
        <label>System Serial Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>95</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Phone__c</fullName>
        <label>Technician Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Clause__c</fullName>
        <label>Technology Clause</label>
        <picklist>
            <picklistValues>
                <fullName>All new products to be negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All new products at no increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All new products at capped increase ($/%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolutionary products at no increase, Revolutionary negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolutionary products at capped increase ($/%), Revolutionary negotiated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terminating_of_Prior_Rebates__c</fullName>
        <label>Terminating of Prior Rebates</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Time_in_Info_Hold_Hours__c</fullName>
        <formula>ROUND( 9 * ( 
( 5 * FLOOR( ( DATEVALUE( Left_Info_Hold_Status__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( Left_Info_Hold_Status__c ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 9 * ( MOD( Left_Info_Hold_Status__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( Info_Hold_Set__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( Info_Hold_Set__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( Info_Hold_Set__c- DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time in Info Hold (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <label>Warranty Status</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <formula>IF(SuppliedName = null, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Y_M_CREATE__c</fullName>
        <description>YYYY-MM</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))+&quot;-&quot;+TEXT(MONTH(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y-M CREATE</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ANZ_Customer_Feedback_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Feedback</value>
        </filters>
        <label>ANZ Customer Feedback Cases</label>
        <sharedTo>
            <role>ANZ_ALL</role>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Capital_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Contracts Capital Queue</label>
        <queue>Contracts_Capital</queue>
    </listViews>
    <listViews>
        <fullName>Contracts_Legal_Approval_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Contracts Legal Approval Queue</label>
        <queue>Contracts_Legal_Approval</queue>
    </listViews>
    <listViews>
        <fullName>Contracts_Non_Capital</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Contracts Non-Capital</label>
        <queue>Contracts_Non_Capital</queue>
    </listViews>
    <listViews>
        <fullName>Contracts_Pricing_Approval_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Queue</filterScope>
        <label>Contracts Pricing Approval Queue</label>
        <queue>Contracts_Pricing_Approval</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>National_Contract_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>National Contract Queue</label>
        <queue>National_Contract</queue>
    </listViews>
    <listViews>
        <fullName>Standard_Contract_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Standard Contract Queue</label>
        <queue>Standard_Contract</queue>
    </listViews>
    <recordTypes>
        <fullName>Customer_Feedback</fullName>
        <active>true</active>
        <businessProcess>ANZ Customer Feedback</businessProcess>
        <description>To track customer comments / questions / complaints etc</description>
        <label>Customer Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldReq</fullName>
        <active>true</active>
        <businessProcess>Contact Ops</businessProcess>
        <label>FieldReq</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servicemax</fullName>
        <active>true</active>
        <businessProcess>Contact Ops</businessProcess>
        <description>This record type is used to store Servicemax Case Information</description>
        <label>Servicemax</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_In_Account</fullName>
        <active>true</active>
        <description>Chekcs to see if sleetc contact is in the selected account</description>
        <errorConditionFormula>AND(
(RecordType.DeveloperName = &apos;Customer_Feedback&apos;),
(Contact.AccountId &lt;&gt; NULL),
(Account.Id &lt;&gt; Contact.AccountId)
)</errorConditionFormula>
        <errorMessage>Sorry this contact isnt associated with this account. You need to create a relationship between the two before you can submit a case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_In_completed_Info_date</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;FieldReq&apos; &amp;&amp;  ISBLANK(Complete_Info_Date__c )  &amp;&amp; ( ISPICKVAL(Status, &apos;Quoted&apos;) || ISPICKVAL(Status, &apos;Closed&apos;))</errorConditionFormula>
        <errorDisplayField>Complete_Info_Date__c</errorDisplayField>
        <errorMessage>Please Fill Completed Info date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejected_reason_should_Fill_In</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status,&apos;Rejected&apos;)  &amp;&amp;  ISPICKVAL(Rejected_Reason__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Rejected_Reason__c</errorDisplayField>
        <errorMessage>Please Fill In the Rejected Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesReps_Should_Fill_In_Basic_Info</fullName>
        <active>true</active>
        <description>For Requesting Contracts SalesReps should Fill In some basic Info</description>
        <errorConditionFormula>NOT(ISBLANK(Opportunity__c ))  &amp;&amp;  ISPICKVAL(Pricing_Floor__c,&apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Pricing_Floor__c</errorDisplayField>
        <errorMessage>Please Fill In Pricing Floor Info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_should_be_set_to_New</fullName>
        <active>true</active>
        <description>Status should be set to new while creating New Case</description>
        <errorConditionFormula>ISNEW() &amp;&amp;   NOT( ISPICKVAL( Status, &quot;New&quot;)) &amp;&amp;   NOT(ISBLANK(Opportunity__c))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please change the &apos;Status&apos; to New and Save</errorMessage>
    </validationRules>
</CustomObject>